(Yanking, Killing): Minor cleanups.

--- a/man/killing.texi
+++ b/man/killing.texi
@@ -31,8 +31,8 @@ one buffer and yank it in another buffer.
 @cindex killing text
 @cindex cutting text
 @cindex deletion
-  Most commands which erase text from the buffer save it in the kill
-ring so that you can move or copy it to other parts of the buffer.
+  Most commands which erase text from the buffer save it in the @dfn{kill
+ring} so that you can move or copy it to other parts of the buffer.
 These commands are known as @dfn{kill} commands.  The rest of the
 commands that erase text do not save it in the kill ring; they are known
 as @dfn{delete} commands.  (This distinction is made only for erasure of
@@ -274,7 +274,8 @@ single kill ring entry as usual.
 
   @dfn{Yanking} means reinserting text previously killed.  This is what
 some systems call ``pasting.''  The usual way to move or copy text is to
-kill it and then yank it elsewhere one or more times.
+kill it and then yank it elsewhere one or more times.  This is very safe
+because Emacs remembers many recent kills, not just the last one.
 
 @table @kbd
 @item C-y
