--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,19 @@
+2004-08-16  Richard M. Stallman  <rms@gnu.org>
+
+	* sysdep.c (child_setup_tty) [SIGNALS_VIA_CHARACTERS]:
+	Set VQUIT and VINTR chars to the standard ones if they are unset.
+	[AIX]: Don't do that here.  And don't force VINTR to standard
+	when SIGNALS_VIA_CHARACTERS.
+
+	* process.c (process_send_signal) 
+	[SIGNALS_VIA_CHARACTERS, HAVE_TERMIOS]:	Clean up.
+	Do nothing if the character is CVDISABLE.
+
+	* xfaces.c (merge_face_ref): Specifying `unspecified' is a no-op.
+
+	* intervals.c (move_if_not_intangible): 
+	Force POSITION to be between BEGV and ZV.
+
 2004-08-14  John Paul Wallington  <jpw@gnu.org>
 
 	* buffer.c (Frestore_buffer_modified_p): Doc fix.
@@ -73,6 +89,10 @@
 	* keyboard.c (syms_of_keyboard) <disable-point-adjustment>:  Doc fix.
 
 	* callint.c (Fcall_interactively): Doc fix.
+
+2004-07-30  Richard M. Stallman  <rms@gnu.org>
+
+	* abbrev.c (Fexpand_abbrev): Undo previous change.
 
 2004-07-30  Kim F. Storm  <storm@cua.dk>
 
