--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-18  Kim F. Storm  <storm@cua.dk>
+
+	* processes.texi (Accepting Output): Add `just-this-one' arg to
+	`accept-process-output'.
+
 2004-08-10  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* keymaps.texi: Various changes in addition to:
