--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-17  Kim F. Storm  <storm@cua.dk>
+
+	* process.c (process_send_signal): Fix last change--use
+	_POSIX_VDISABLE instead of CVDISABLE when available.
+
 2004-08-16  Richard M. Stallman  <rms@gnu.org>
 
 	* sysdep.c (child_setup_tty) [SIGNALS_VIA_CHARACTERS]:
@@ -5,13 +10,13 @@
 	[AIX]: Don't do that here.  And don't force VINTR to standard
 	when SIGNALS_VIA_CHARACTERS.
 
-	* process.c (process_send_signal) 
+	* process.c (process_send_signal)
 	[SIGNALS_VIA_CHARACTERS, HAVE_TERMIOS]:	Clean up.
 	Do nothing if the character is CVDISABLE.
 
 	* xfaces.c (merge_face_ref): Specifying `unspecified' is a no-op.
 
-	* intervals.c (move_if_not_intangible): 
+	* intervals.c (move_if_not_intangible):
 	Force POSITION to be between BEGV and ZV.
 
 2004-08-14  John Paul Wallington  <jpw@gnu.org>
