--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-17  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* emacs-lisp/copyright.el (copyright-update-year): Delete code
+	that replaces 20xy with xy.
+
 2004-08-17  John Paul Wallington  <jpw@gnu.org>
 
 	* emacs-lisp/re-builder.el (reb-mode-map): Define within defvar.
