--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-17  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* emacs.texi (Top): Mention "cutting" and "pasting" as synonyms
+	for "killing" and "yanking" in main menu.
+
 2004-08-16  Richard M. Stallman  <rms@gnu.org>
 
 	* killing.texi (Yanking, Killing): Minor cleanups.
