--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-19  Kim F. Storm  <storm@cua.dk>
+
+	* process.c (process_send_signal): Use CDISABLE.
+
+	* sysdep.c (child_setup_tty, init_sys_modes): Use CDISABLE.
+
 2004-08-18  Kim F. Storm  <storm@cua.dk>
 
 	* process.c (Faccept_process_output): Add arg JUST-THIS-ONE;
