--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,10 @@
 2004-08-19  Kim F. Storm  <storm@cua.dk>
 
+	* process.c (wait_reading_process_input): Clean up.
+	Add wait_for_cell, wait_proc, and just_wait_proc args
+	to avoid overloading `read_kbd' and `do_display' args.
+	Change read_kbd arg to int.  All callers changed.
+
 	* process.c (process_send_signal): Use CDISABLE.
 
 	* sysdep.c (child_setup_tty, init_sys_modes): Use CDISABLE.
