--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-19  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* syntax.c (char_quoted): Mixup byte/char pos.
+	(back_comment): Fixup globals in all cases.
+
 2004-08-19  Jan Dj,Ad(Brv  <jan.h.d@swipnet.se>
 
 	* xfns.c (x_set_name, x_set_title): Encode title to UTF8 before
