--- a/leim/ChangeLog
+++ b/leim/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-16  Kenichi Handa  <handa@m17n.org>
+
+	* quail/georgian.el ("georgian"): Call quail-define-package with
+	the show-layout arg t.
+
 2004-08-06  Andreas Schwab  <schwab@suse.de>
 
 	* Makefile.in (install): Remove .arch-inventory files.
