*** empty log message ***

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -4,8 +4,8 @@
 	32-bit machines.
 	(Several Buffers): Clarify which buffer is selected if `2' is
 	pressed in the Buffer Menu.
-	(Several Buffers): Auto Revert mode can be used to update the
-	Buffer Menu automatically.
+	Auto Revert mode can be used to update the Buffer Menu
+	automatically.
 
 2004-08-21  Eli Zaretskii  <eliz@gnu.org>
 
