--- a/man/reftex.texi
+++ b/man/reftex.texi
@@ -2976,7 +2976,7 @@ with the @kbd{g} key.  To get this behavior, use instead@refill
 @end lisp
 
 @node AUCTeX, Multifile Documents, Faces, Top
-@section @w{AUC @TeX{}}
+@section AUC@TeX{}
 @cindex @code{AUCTeX}, Emacs package
 @cindex Emacs packages, @code{AUCTeX}
 
@@ -2985,7 +2985,7 @@ files with Emacs (@pxref{Top,AUCTeX,,auctex, The AUCTeX User Manual}).
 If AUCTeX is not part of your Emacs distribution, you can get
 it@footnote{XEmacs 21.x users may want to install the corresponding
 XEmacs package.} by ftp from the
-@uref{http://www.sunsite.auc.dk/auctex/,AUCTeX distribution site}.
+@uref{ftp://ftp.gnu.org/pub/gnu/auctex,AUCTeX distribution site}.
 
 @menu
 * AUCTeX-RefTeX Interface::          How both packages work together
