--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-22  Richard M. Stallman  <rms@gnu.org>
+
+	* process.c (process_send_signal) [SIGNALS_VIA_CHARACTERS,
+	HAVE_TERMIOS]: If there's no char for this signal, drop through
+	and use system calls.
+
+	* bytecode.c (Fbyte_code) <unwind-protect>: Cannot GC.
+
 2004-08-20  Kim F. Storm  <storm@cua.dk>
 
 	* process.c (wait_reading_process_output): Rename from
