--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-22  Richard M. Stallman  <rms@gnu.org>
+
+	* modes.texi (Major Mode Conventions): Discuss rebinding of
+	standard key bindings.
+
 2004-08-18  Kim F. Storm  <storm@cua.dk>
 
 	* processes.texi (Accepting Output): Add `just-this-one' arg to
